// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaymentBarCheckoutButton /> should render disabled button 1`] = `
<Link
  aria-disabled={true}
  disabled={true}
  href="/checkout"
  role="button"
  tabIndex={0}
>
  <RippleButton
    className="css-ce5yef"
    disabled={true}
    flat={false}
    onClick={null}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="regular"
    wrapContent={true}
  >
    <Text
      string="cart.checkout"
    />
  </RippleButton>
</Link>
`;

exports[`<PaymentBarCheckoutButton /> should render enabled button 1`] = `
<Link
  aria-disabled={false}
  disabled={false}
  href="/checkout"
  role="button"
  tabIndex={0}
>
  <RippleButton
    className="css-1g94fbj"
    disabled={false}
    flat={false}
    onClick={null}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="regular"
    wrapContent={true}
  >
    <Text
      string="cart.checkout"
    />
  </RippleButton>
</Link>
`;
